--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Tempat Parkir</title>
   </head>
   <body>
-    <script src="js/script.js"></script>
+    <script src="js/script2.js"></script>
   </body>
 </html>
