membuat komentar untuk 2 script yang menjadi pilihan penggunaan

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <title>Tempat Parkir</title>
   </head>
   <body>
+    <!-- script untuk pengelolaan angkot yang pertama -->
+    <!-- <script src="js/script.js"></script> -->
+
+    <!-- script untuk pengelolaan angkot yang kedua -->
     <script src="js/script2.js"></script>
   </body>
 </html>
